2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Make note about expanding urls.

	* help/manual/C/gtk-doc-manual.xml:
	  Document the use of |[ |] as a shortcut for program listing.

	* tests/gobject/src/giface.h:
	* tests/gobject/src/gobject.c:
	  Fix one undocumented symbol and add an exampl of the programlisting
	  shortcut.

2008-04-23  Stefan Kost  <ensonic@users.sf.net>

	reviewed by: <delete if not using a buddy>
	patch by: <delete if not someone else's patch>

	* gtkdoc-mkdb.in:
	* gtkdoc-mkman.in:
	* gtkdoc-mktmpl.in:

2008-04-22  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  We need to update the webpage.

	* TODO:
	* configure.in:
	  Planning.

	* gtkdoc-mkdb.in:
	  Hopefully now unbreak the docbuild, if one has template but not uses
	  them.

2008-04-17  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Add one more warning. Also trac location of section docs. Merge
	  source symbols once and then on demand (if we read a template).

2008-04-11  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.in:
	  Idea about the tracing. Not that practical as it is.

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Unify file-error messages. Improve warning detail. Fix undocumented
	  status for template less runs.

2008-04-10  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Ideas.

	* gtkdoc-common.pl.in:
	  Add common method for prining (gcc-style) warnings.

	* gtkdoc-mkdb.in:
	  Use new method. Harmonize the warnings a bit. Remember locations
	  symbols are taken from template files for use in warnings.

2008-04-09  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
          Some releasing info.

	* gtkdoc-mkdb.in:
	  Print file/line number in warning.

	* help/manual/C/gtk-doc-manual.xml:
	  Some docs for what the <module>-overrides.txt file is for.

2008-03-23  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  Tell automake to not warn us about portabillity issues. Its too late
	  for that.

	* ChangeLog: