@@ -1,5 +1,10 @@
 2008-05-05  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mktmpl.in:
+	  It is GObject not GtkObject anymore
+
+2008-05-05  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  Make note about expanding urls.
 
